# scribr

./: .gitignore  README.md  config.toml.example  index.html  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
scribr/: app.py  config.py  hotkeys.py  injector.py  main.py  permissions.py  pipeline.py  recorder.py  stitcher.py  transcriber.py
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  injector.rs  lib.rs  main.rs  models.rs  transcriber.rs  tray.rs
src/components/: GeneralSettings.tsx  HotkeyPicker.tsx  ModelList.tsx
src/hooks/: index.ts
src/pages/: Settings.tsx
src/types/: index.ts
